Fix Large screen alignment issues

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -54,6 +54,9 @@ h2 {
   @media all and (min-width: 1152px) {
     max-width: 1024px;
   }
+  @media all and (min-width: 1440px) {
+    max-width: 1144px;
+  }
 }
 
 .welcome-back-card {
